--- a/style.css
+++ b/style.css
@@ -21,13 +21,13 @@ body {
 }
 
 .profile-img {
-  width: 160px;
-  height: 160px;
+  width: 130px;
+  height: 130px;
   border-radius: 50%;
   object-fit: cover;
   border: 4px solid #fff;
-  box-shadow: 0px 6px 18px rgba(0,0,0,0.25);
-  margin-bottom: 20px;
+  display:block;
+  margin: 0 auto;
 }
 
 .hero h1 {
